crates/ditto-checker/tests/golden/type-errors/unification_error_4.ditto
module Test exports (..)

identity_int = fn (n: Int): Int -> n

huh = "nope" |> identity_int
